www/styles/pinhole-photo-tile.css
.pinhole-tile-view .swat-tile {
	width: 130px;
	height: auto;
	padding: 0;
	margin: 5px;
	float: left;
	text-align: center;
	border: 1px solid transparent;
	/* IE6 Hack
	   set an unused color to be index color
	   then remove this indexed color */
	_border-color: tomato;
	_filter:chroma(color=tomato);
}

.pinhole-tile-view .swat-tile a {
	padding: 10px;
	display: block;
	text-decoration: none;
}

.pinhole-tile-view .swat-tile a:hover {
	background: #33393a;
}

.pinhole-tile-view .swat-tile span {
	display: block;
	height: 2em;
	padding: 0.3em 0;
}

.pinhole-tile-view .swat-tile a span {
	cursor: pointer; /* for Ie6 */
}

.pinhole-tile-view img {
	display: block;
	margin: 0 auto;
	padding: 2px;
	border: 1px solid #888a85;
	background: #555753;
}

